--- a/ShoppingList/res/values/strings.xml
+++ b/ShoppingList/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    
+    <string name="inputError">Please Fill All Fields</string>
 
     <string name="app_name">ShoppingList</string>
     <string name="hello_world">Hello world!</string>
