Stopped overcomplicating: choose intent now checks on submit if the user is over budget

--- a/ShoppingList/res/values/strings.xml
+++ b/ShoppingList/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     
     <string name="inputError">Please Fill All Fields</string>
+    <string name="spentTooMuch">You have overspent by</string>
 
     <string name="app_name">ShoppingList</string>
     <string name="hello_world">Hello world!</string>
