--- a/ShoppingList/res/values/strings.xml
+++ b/ShoppingList/res/values/strings.xml
@@ -27,6 +27,13 @@
     <string name="priceHead">Price</string>
     <string name="vatHead">Vat @21%</string>
     <string name="totalHead">Total</string>
+    <string name="totalSpent">Total Spent</string>
+    
+    <string name="description">Description</string>
+    <string name="ok">OK</string>
+    
+    <string name="sendEmail">Send Email</string>
+    <string name="emailSubject">Shopping List</string>
     
     <string-array name="itemList">
         <item>Baking Powder</item>
